# unreal-harness

./: .gitignore  00_overview.md  01_asset_path_naming_plan.md  02_animation_plan.md  03_statetree_plan.md  04_blueprint_plan.md  05_cpp_class_generation_plan.md  06_dataasset_datatable_config_plan.md  07_gameplaytag_input_ability_plan.md  08_ui_umg_plan.md  09_test_review_validation_plan.md  10_packaging_cook_build_plan.md  AGENTS.md  CLAUDE.md  PROGRESS.md  README.md  ROADMAP.md  SESSION_SUMMARY_2026-05-24.md  SPRINT_1_PLAN.md  ue5_statetree_automation_bridge_plan.md
cli/: pyproject.toml
cli/Saved/AutomationReports/: result.json
cli/tests/: test_asset_snapshot.py  test_asset_validate.py  test_build.py  test_cli_args.py  test_cpp_buildcs.py  test_cpp_generate.py  test_cpp_reflection.py  test_logs.py  test_ping.py  test_review_diff.py  test_review_summarize.py  test_runner.py  test_smoke_statetree.py  test_smoke_ue_plugin.py  test_statetree_create.py  test_statetree_diff.py  test_statetree_report.py  test_statetree_run.py  test_statetree_snapshot.py  test_statetree_spec_edit.py  test_statetree_validate.py  test_statetree_wire.py  test_status_cmd.py  test_test_automation.py  test_validate_cmd.py
cli/ue_auto/: __main__.py  main.py  report.py  result.py  runner.py
cli/ue_auto.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
cli/ue_auto/commands/: ai_statetree.py  asset.py  build_cmd.py  cpp_cmd.py  logs_cmd.py  review.py  status_cmd.py  test_cmd.py  validate_cmd.py
docs/: USAGE.md
docs/asset_rules/: assets.naming_policy.yaml
(+21 files in other folders)
