[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ue-auto"
version = "0.1.0"
description = "UE5 automation harness CLI"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
ue-auto = "ue_auto.main:main"

[tool.setuptools.packages.find]
where = ["."]
